[package]
name = "nation"
version = "0.1.0"
authors = ["John Matthew Narofsky <7ytd765789@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3", features = ["full"] }
# Rustls got a security audit!
reqwest = { version = "0.10.8", default-features = false, features = ["rustls-tls"] }
tokio-compat-02 = "0.1.2"
structopt = "0.3.20"
quick-xml = { version = "0.20.0", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0.33"
itertools = "0.9.0"
directories = "3.0.1"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
quick-xml = { version = "0.20.0", features = ["serialize"] }
